--- a/src/site/notes/無題のファイル.md
+++ b/src/site/notes/無題のファイル.md
@@ -1,14 +1,6 @@
 ---
-{"dg-publish":true,"permalink":"//","title":"無題のファイル","tags":[null]}
+{"dg-publish":true,"dg-permalink":"無題のファイル","permalink":"/無題のファイル/","title":"無題のファイル","tags":[null]}
 ---
 
 
 # 無題のファイル
-
-## 概要
-
-## 診断・基準
-
-## 治療・処方
-
-## 出典
