--- a/src/site/notes/バソプレシン実践プロトコル.md
+++ b/src/site/notes/バソプレシン実践プロトコル.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"title":"敗血症性ショックにおけるバソプレシン使用プロトコル","tags":["救急","集中治療","敗血症","マニュアル"]}
+{"dg-publish":true,"dg-permalink":"バソプレシン実践プロトコル","permalink":"/バソプレシン実践プロトコル/","title":"敗血症性ショックにおけるバソプレシン使用プロトコル","tags":["救急","集中治療","敗血症","マニュアル"]}
 ---
 
 
@@ -7,7 +7,7 @@
 
 **対象:** ノルアドレナリン(NA)不応性の血管拡張性ショック
 **目的:** カテコラミン過量投与の回避 (Catecholamine Sparing) とショック離脱
-**出典:** m3.com スペシャリストの視点（久志本成樹 医師）
+**出典:** m3.com スペシャリスト視点（久志本成樹 医師）
 
 ---
 
