リンクテスト2

--- a/src/site/notes/救急/バソプレシン実践プロトコル.md
+++ b/src/site/notes/救急/バソプレシン実践プロトコル.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-permalink":"バソプレシン実践プロトコル","permalink":"/バソプレシン実践プロトコル/","title":"敗血症性ショックにおけるバソプレシン使用プロトコル","tags":["救急","集中治療","敗血症","マニュアル"]}
+{"dg-publish":true,"dg-permalink":"バソプレシン実践プロトコル","title":"敗血症性ショックにおけるバソプレシン使用プロトコル","tags":["救急","集中治療","敗血症","マニュアル"]}
 ---
 
 
