縦長に変更

--- a/src/site/notes/救急/バソプレシン実践プロトコル.md
+++ b/src/site/notes/救急/バソプレシン実践プロトコル.md
@@ -1,7 +1,15 @@
 ---
-{"dg-publish":true,"dg-permalink":"バソプレシン実践プロトコル","title":"敗血症性ショックにおけるバソプレシン使用プロトコル","tags":["救急","集中治療","敗血症","マニュアル"]}
+dg-publish: true
+dg-permalink: バソプレシン実践プロトコル
+title: 敗血症性ショックにおけるバソプレシン使用プロトコル
+tags:
+  - 救急
+  - 集中治療
 ---
 
+# 敗血症性ショックにおけるバソプレシン使用プロトコル
+
+（ここから下に本文を残す）
 
 # 📋 敗血症性ショックにおけるバソプレシン使用プロトコル
 
