--- a/src/site/notes/B_循環器/急性心不全.md
+++ b/src/site/notes/B_循環器/急性心不全.md
@@ -4,6 +4,12 @@ title: 急性心不全
 ---
 
 # 急性心不全に対する薬物治療
+> [!fail] ここがポイント！
+> - 急性心不全の症状はうっ血 (congestion) と低心拍出 (LOS) による症状の2つである
+> - 急性心不全の症状は，前負荷・後負荷・心収縮力の不均衡が生じることによって生じる
+> - 急性心不全の治療は，前負荷・後負荷・心収縮力のどこがターゲットになるかでおのずと決まってくる
+> - 急性心不全の初期治療はスピードが重要である
+
 
 ## 1. 重要なポイント（要旨）
 * **症状の2大要素**: 「うっ血 (congestion)」と「低心拍出 (low output syndrome; LOS)」。
