--- a/src/site/notes/B_循環器/急性心不全.md
+++ b/src/site/notes/B_循環器/急性心不全.md
@@ -10,6 +10,20 @@ title: 急性心不全
 > - 急性心不全の治療は，前負荷・後負荷・心収縮力のどこがターゲットになるかでおのずと決まってくる
 > - 急性心不全の初期治療はスピードが重要である
 
+<div style="border: 2px solid #e60012; border-radius: 5px; overflow: hidden; font-family: sans-serif;">
+  <div style="background-color: #e60012; color: white; padding: 5px 10px; font-weight: bold; font-size: 1.1em;">
+    <span style="margin-right: 5px;">➡</span> ここがポイント！
+  </div>
+  <div style="padding: 15px; background-color: white; color: black;">
+    <ul style="margin: 0; padding-left: 20px; line-height: 1.6;">
+      <li>急性心不全の症状はうっ血 (congestion) と低心拍出 (LOS) による症状の2つである</li>
+      <li>急性心不全の症状は，前負荷・後負荷・心収縮力の不均衡が生じることによって生じる</li>
+      <li>急性心不全の治療は，前負荷・後負荷・心収縮力のどこがターゲットになるかでおのずと決まってくる</li>
+      <li>急性心不全の初期治療はスピードが重要である</li>
+    </ul>
+  </div>
+</div>
+
 
 ## 1. 重要なポイント（要旨）
 * **症状の2大要素**: 「うっ血 (congestion)」と「低心拍出 (low output syndrome; LOS)」。
