--- a/src/site/notes/B_循環器/急性心不全.md
+++ b/src/site/notes/B_循環器/急性心不全.md
@@ -4,14 +4,8 @@ title: 急性心不全
 ---
 
 # 急性心不全に対する薬物治療
-> [!fail] ここがポイント！
-> - 急性心不全の症状はうっ血 (congestion) と低心拍出 (LOS) による症状の2つである
-> - 急性心不全の症状は，前負荷・後負荷・心収縮力の不均衡が生じることによって生じる
-> - 急性心不全の治療は，前負荷・後負荷・心収縮力のどこがターゲットになるかでおのずと決まってくる
-> - 急性心不全の初期治療はスピードが重要である
-
-<div style="border: 2px solid #e60012; border-radius: 5px; overflow: hidden; font-family: sans-serif;">
-  <div style="background-color: #e60012; color: white; padding: 5px 10px; font-weight: bold; font-size: 1.1em;">
+<div style="border: 4px solid #bd0d1cf0; border-radius: 5px; overflow: hidden; font-family: sans-serif;">
+  <div style="background-color: #bd0d1cf0; color: white; padding: 5px 10px; font-weight: bold; font-size: 1.1em;">
     <span style="margin-right: 5px;">➡</span> ここがポイント！
   </div>
   <div style="padding: 15px; background-color: white; color: black;">
